--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,140 +1,140 @@
 {
-  "WELCOME": "Welcome",
+  "WELCOME": "Willkommen",
   "COMMON": {
-    "ERROR": "Error",
-    "ERROR_TITLE": "Unexpected error occurred",
-    "REPORT_MESSAGE": "We have reported this to our team ! Please close the app and start again!",
-    "CLOSE": "Close"
+    "ERROR": "Fehler",
+    "ERROR_TITLE": "Unerwarteter Fehler aufgetreten",
+    "REPORT_MESSAGE": "Wir haben dies unserem Team gemeldet! Bitte schließen Sie die App und starten Sie erneut!",
+    "CLOSE": "Schließen"
   },
   "FOOTER": {
-    "HOME": "Home",
-    "CONVERSATION": "Conversations",
-    "NOTIFICATION": "Notifications",
-    "SETTINGS": "Settings"
+    "HOME": "Startseite",
+    "CONVERSATION": "Gespräche",
+    "NOTIFICATION": "Benachrichtigungen",
+    "SETTINGS": "Einstellungen"
   },
   "CONFIGURE_URL": {
     "ENTER_URL": "Installation URL",
-    "URL_ERROR": "Enter a valid URL",
+    "URL_ERROR": "Bitte eine valide URL eingeben.",
     "CONNECT": "Connect",
-    "CHANGE_LANGUAGE": "Change language",
-    "ERROR": "Invalid installation url"
+    "CHANGE_LANGUAGE": "Sprache ändern",
+    "ERROR": "Ungültige Installationsurl"
   },
   "LOGIN": {
-    "TITLE": "Login to your account",
-    "EMAIL": "Email",
-    "PASSWORD": "Password",
-    "EMAIL_ERROR": "Enter a valid email",
-    "PASSWORD_ERROR": "Enter a valid password",
-    "LOGIN": "Sign In",
-    "FORGOT_PASSWORD": "Forgot your password?",
-    "RESET_HERE": "Reset here",
-    "NO_ACCOUNT": "Don't have an account?",
-    "CREATE_ACCOUNT": "Create new account",
-    "SETTINGS": "Settings",
-    "CHANGE_LANGUAGE": "Change language",
+    "TITLE": "Melden Sie sich bei Ihrem Konto an",
+    "EMAIL": "E-Mail",
+    "PASSWORD": "Passwort",
+    "EMAIL_ERROR": "Geben Sie eine gültige E-Mail-Adresse ein",
+    "PASSWORD_ERROR": "Geben Sie ein gültiges Passwort ein",
+    "LOGIN": "Anmelden",
+    "FORGOT_PASSWORD": "Passwort vergessen?",
+    "RESET_HERE": "Hier zurücksetzen",
+    "NO_ACCOUNT": "Sie haben kein Konto?",
+    "CREATE_ACCOUNT": "Neuen Account erstellen",
+    "SETTINGS": "Einstellungen",
+    "CHANGE_LANGUAGE": "Sprache ändern",
     "TERMS": "Terms & Conditions",
-    "CHANGE_URL": "Change URL"
+    "CHANGE_URL": "URL ändern"
   },
   "FORGOT_PASSWORD": {
-    "EMAIL": "Please enter your email",
-    "EMAIL_ERROR": "Enter a valid email",
-    "RESET_HERE": "Reset password",
-    "HEADER_TITLE": "Reset password",
-    "TITLE": "Forgot Password?",
-    "SUB_TITLE": "Don't worry! We got your back"
+    "EMAIL": "Bitte E-Mail Adresse eingeben",
+    "EMAIL_ERROR": "Bite eine gültige E-Mail Adresse eingeben",
+    "RESET_HERE": "Passwort zurücksetzen",
+    "HEADER_TITLE": "Passwort zurücksetzen",
+    "TITLE": "Passwort vergessen?",
+    "SUB_TITLE": "Machen Sie sich keine Sorgen!"
   },
   "CONVERSATION": {
-    "DEFAULT_HEADER_TITLE": "Conversations",
-    "MINE": "Mine",
-    "UN_ASSIGNED": "Unassigned",
-    "ALL": "All",
-    "EMPTY": "There are no active conversations in this group.",
-    "PICTURE_CONTENT": "Picture message",
-    "ATTACHMENT_CONTENT": "File Attachment",
+    "DEFAULT_HEADER_TITLE": "Konversationen",
+    "MINE": "Meine",
+    "UN_ASSIGNED": "Nicht zugewiesen",
+    "ALL": "Alle",
+    "EMPTY": "Es gibt keine aktiven Konversationen in dieser Gruppe.",
+    "PICTURE_CONTENT": "Bildnachricht",
+    "ATTACHMENT_CONTENT": "Dateianhang",
     "DOWNLOAD": "Download",
-    "TODAY": "Today",
-    "YESTERDAY": "Yesterday",
-    "TYPE_MESSAGE": "Type message",
-    "TYPING": "typing",
-    "ALL_CONVERSATION_LOADED": "All conversations loaded",
-    "RESOLVE": "Resolve conversation",
-    "RE_OPEN": "Reopen conversation",
-    "ASSIGN": "Assign conversation",
-    "FILE_SIZE_LIMIT": "File exceeds the 5MB attachment limit",
-    "CANCEL": "Cancel",
-    "PRIVATE_MSG_INPUT": "This will be visible only to Agents",
-    "UN_ASSIGN": "Unassign conversation"
+    "TODAY": "Heute",
+    "YESTERDAY": "Gesntern",
+    "TYPE_MESSAGE": "Nachricht eingeben",
+    "TYPING": "tippt",
+    "ALL_CONVERSATION_LOADED": "All Nachrichten geladen",
+    "RESOLVE": "Konversation gelöst",
+    "RE_OPEN": "Konversation wiedereröffnen",
+    "ASSIGN": "Konversation zuweisen",
+    "FILE_SIZE_LIMIT": "Die Datei ist größer als das 40MB Limit.",
+    "CANCEL": "Abbrechen",
+    "PRIVATE_MSG_INPUT": "Dies wird nur für Agenten sichtbar sein",
+    "UN_ASSIGN": "Gesprächszuordnung aufheben"
   },
-  "FILTER": {
-    "HEADER_TITLE": "Conversation Filter",
-    "CHOOSE_INBOX": "Choose Inbox",
-    "CHOOSE_STATUS": "Conversation Status",
-    "OPEN": "Open",
-    "RESOLVED": "Resolved",
+   "FILTER": {
+    "HEADER_TITLE": "Konversationsfilter",
+    "CHOOSE_INBOX": "Posteingang auswählen",
+    "CHOOSE_STATUS": "Konversationsstatus",
+    "OPEN": "Öffnen",
+    "RESOLVED": "Gelöst",
     "BOT": "Bot",
-    "SUBMIT": "Submit"
+    "SUBMIT": "Senden"
   },
   "SETTINGS": {
-    "HEADER_TITLE": "Settings",
-    "AVAILABILITY": "Availability",
-    "NOTIFICATION": "Notification Preferences",
-    "HELP": "Help Docs",
-    "CHAT_WITH_US": "Chat with Us",
-    "LOG_OUT": "Logout",
-    "SWITCH_ACCOUNT": "Switch Account",
-    "CHANGE_LANGUAGE": "Change Language",
-    "SUBMIT": "Submit"
+    "HEADER_TITLE": "Einstellungen",
+    "AVAILABILITY": "Verfügbarkeit",
+    "NOTIFICATION": "Benachrichtigungseinstellungen",
+    "HELP": "Hilfedokumente",
+    "CHAT_WITH_US": "Mit uns chatten",
+    "LOG_OUT": "Abmelden",
+    "SWITCH_ACCOUNT": "Konto wechseln",
+    "CHANGE_LANGUAGE": "Sprache ändern",
+    "SUBMIT": "Senden"
   },
   "NOTIFICATION": {
-    "HEADER_TITLE": "Notifications",
-    "EMPTY": "No notifications yet.",
-    "EMPTY_MORE_TEXT": "Once you start receiving notifications, they'll appear here.",
-    "ALL_NOTIFICATION_LOADED": "All notifications loaded",
-    "MARK_ALL": "Mark all as read",
-    "CANCEL": "Cancel"
+    "HEADER_TITLE": "Benachrichtigungen",
+    "EMPTY": "Noch keine Benachrichtigungen.",
+    "EMPTY_MORE_TEXT": "Sobald Sie Benachrichtigungen erhalten, werden diese hier angezeigt.",
+    "ALL_NOTIFICATION_LOADED": "Alle Benachrichtigungen geladen",
+    "MARK_ALL": "Alle als gelesen markieren",
+    "CANCEL": "Abbrechen"
   },
   "AVAILABILITY": {
     "ONLINE": "Online",
-    "BUSY": "Busy",
+    "BUSY": "Beschäftigt",
     "OFFLINE": "Offline"
   },
   "NOTIFICATION_PREFERENCE": {
-    "TITLE": "Notification Preferences",
-    "EMAIL": "Email",
+    "TITLE": "Benachrichtigungseinstellungen",
+    "EMAIL": "E-Mail",
     "PUSH": "Push",
-    "CONVERSATION_CREATE_PUSH": "Send push notifications when a new conversation is created",
-    "CONVERSATION_ASSIGNEE_PUSH": "Send push notifications when a conversation is assigned to me",
-    "CONVERSATION_ASSIGNED_NEW_MESSAGE_PUSH": "Send push notifications when a new message is created in an assigned conversation",
-    "CONVERSATION_CREATE_EMAIL": "Send email notifications when a new conversation is created",
-    "CONVERSATION_ASSIGNEE_EMAIL": "Send email notifications when a conversation is assigned to me",
-    "CONVERSATION_ASSIGNED_NEW_MESSAGE_EMAIL": "Send email notifications when a new message is created in an assigned conversation"
+    "CONVERSATION_CREATE_PUSH": "Push-Benachrichtigungen senden, wenn eine neue Konversation erstellt wird",
+    "CONVERSATION_ASSIGNEE_PUSH": "Push-Benachrichtigungen senden, wenn mir eine Konversation zugewiesen wurde",
+    "CONVERSATION_ASSIGNED_NEW_MESSAGE_PUSH": "Push-Benachrichtigungen senden, wenn eine neue Nachricht in einer zugewiesenen Konversation erstellt wird",
+    "CONVERSATION_CREATE_EMAIL": "Senden E-Mail-Benachrichtigungen, wenn eine neue Konversation erstellt wird",
+    "CONVERSATION_ASSIGNEE_EMAIL": "E-Mail-Benachrichtigungen senden, wenn mir eine Konversation zugewiesen wurde",
+    "CONVERSATION_ASSIGNED_NEW_MESSAGE_EMAIL": "E-Mail-Benachrichtigungen senden, wenn eine neue Nachricht in einer zugewiesenen Konversation erstellt wird"
   },
   "CONVERSATION_DETAILS": {
     "BROWSER": "Browser",
-    "OPERATING_SYSTEM": "Operating System",
-    "INITIATED_AT": "Initiated at",
-    "INITIATED_FROM": "Initiated from"
+    "OPERATING_SYSTEM": "Betriebssystem",
+    "INITIATED_AT": "Initiiert um",
+    "INITIATED_FROM": "Initiiert von"
   },
   "CONVERSATION_ACTION": {
-    "TITLE": "Actions"
+    "TITLE": "Aktionen"
   },
   "AGENT": {
-    "TITLE": "Select Agent"
+    "TITLE": "Agent auswählen"
   },
   "ERRORS": {
-    "COMMON_ERROR": "Could not connect to Woot Server, Please try again later",
-    "OfFLINE": "You must connect to Wi-fi or a cellular network to get online again",
-    "CANNOT_FETCH": "There was an error fetching the information, please try again",
-    "AUTH": "Username / Password Incorrect. Please try again",
-    "NO_ACCOUNTS_MESSAGE": "You don't have access to any MaaS.work accounts"
+    "COMMON_ERROR": "Verbindung zu Woot Server konnte nicht hergestellt werden. Bitte versuchen Sie es später erneut.",
+    "OfFLINE": "Sie müssen eine Verbindung zu Wi-Fi oder einem Mobilfunknetz herstellen, um wieder online zu gehen.",
+    "CANNOT_FETCH": "Beim Abrufen der Informationen ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
+    "AUTH": "Benutzername / Passwort falsch. Bitte versuchen Sie es erneut.",
+    "NO_ACCOUNTS_MESSAGE": "Sie haben keinen Zugriff auf MaaS.work-Konten"
   },
   "SUCCESS": {
-    "AUTH": "Login Successful"
+    "AUTH": "Anmeldung erfolgreich"
   },
   "EXIT": {
-    "TITLE": "Exit",
-    "SUBTITLE": "Are you sure you want to quit?",
-    "CANCEL": "Cancel",
+    "TITLE": "Beenden",
+    "SUBTITLE": "Sind Sie sicher, dass Sie aufhören wollen?",
+    "CANCEL": "Abbrechen",
     "OK": "Ok"
   }
 }
